--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <div class="logo-block">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Lufthansa_Logo_2018.svg" class="logo-white" alt="LH" height="40">
                     <div>
-                        <span class="lh-text-light">Lufthansa</span> <span class="lh-text-bold">GROUP</span>
+                        <span class="lh-text-bold">GROUP</span>
                     </div>
                 </div>
                 <div id="user-display" style="font-size:0.9rem; opacity:0.9; font-weight: 600;">Not Logged In</div>
