--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         // ФЛОТ С ПРИВЯЗКОЙ К ОПЕРАТОРАМ
         const FLEET = [
             // Narrowbody
-            { type: "Airbus A319", maxHours: 5, seats: 138, fuelReserve: "6,500 KG", layoutImg: "https://i.imgur.com/example_a319_layout.png", operators: ["Lufthansa", "SWISS", "Austrian Airlines", "Brussels Airlines", "Lufthansa CityLine", "Lufthansa City Airlines"] },
+            { type: "Airbus A319", maxHours: 5, seats: 138, fuelReserve: "6,500 KG", layoutImg: "https://www.lufthansa.com/content/dam/lh/images/local_variations/seatmaps/ru/202110-A319-nose-RU.jpg", operators: ["Lufthansa", "SWISS", "Austrian Airlines", "Brussels Airlines", "Lufthansa CityLine", "Lufthansa City Airlines"] },
             { type: "Airbus A320neo", maxHours: 6, seats: 180, fuelReserve: "7,200 KG", layoutImg: "https://i.imgur.com/example_a320_layout.png", operators: ["Lufthansa", "Eurowings", "Air Dolomiti", "SAS Scandinavian Airlines", "ITA Airways"] },
             { type: "Airbus A220-300", maxHours: 6.5, seats: 145, fuelReserve: "8,000 KG", layoutImg: "https://i.imgur.com/example_a220_layout.png", operators: ["AirBaltic", "SWISS"] },
             { type: "Boeing 737-800", maxHours: 6, seats: 189, fuelReserve: "7,000 KG", layoutImg: "https://i.imgur.com/example_b738_layout.png", operators: ["Norwegian Airlines", "SunExpress", "Condor"] },
